--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
     "@angular/platform-browser": "~8.2.13",
     "@angular/platform-browser-dynamic": "~8.2.13",
     "@angular/router": "~8.2.13",
+    "@fortawesome/angular-fontawesome": "^0.5.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
     "bootstrap": "^4.3.1",
-    "font-awesome": "^4.7.0",
-    "mdbootstrap": "^4.9.0",
+    "google-libphonenumber": "^3.2.6",
+    "intl-tel-input": "^16.0.7",
     "ngx-bootstrap": "^5.2.0",
+    "ngx-show-hide-password": "^2.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
-    "typescript-string-operations": "^1.3.1",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
